@@ -1,4 +1,2 @@
 require 'spec/expectations/extensions/object'
 require 'spec/expectations/extensions/numeric'
-require 'spec/expectations/extensions/symbol'
-require 'spec/expectations/extensions/inspect_for_expectation_not_met_error'
