@@ -11,6 +11,5 @@ require 'spec/runner/backtrace_tweaker'
 require 'spec/runner/reporter'
 require 'spec/runner/spec_matcher'
 require 'spec/runner/extensions/kernel'
-require 'spec/runner/extensions/object'
 require 'spec/runner/spec_should_raise_handler'
 require 'spec/runner/spec_parser'
