@@ -1,7 +1,7 @@
 module Spec
   module Rails
     class EvalContext < Test::Unit::TestCase
-      undef_method :default_test
+      remove_method :default_test if respond_to?(:default_test)
     end
 
     class Context < Spec::Runner::Context
