@@ -1,6 +1,10 @@
 module Spec
   module Rails
-    class ResponseBody < String
+    class ResponseBody
+      def initialize(response_body)
+        @response_body = response_body
+      end
+
       include TagExpectations
       include RjsExpectations
     end
